# searus

./: CUSEA.md  Cargo.toml  EXT.md  OPTIMIZATION.md  PROJECT.md  README.md  TRT.md  benchtool.rs  tst.rs
examples/: basic_semantic.rs  multi_search.rs  multi_searcher.rs  tagged_trt.rs  time_check.rs  verify_filters.rs
examples/common/: mod.rs
searus_core/: Cargo.toml
searus_core/src/: engine.rs  filter.rs  lib.rs  searcher.rs  types.rs
searus_embeddings/: Cargo.toml
searus_embeddings/src/: lib.rs
searus_examples/: Cargo.toml
searus_examples/examples/: basic_semantic.rs  multi_searcher.rs
searus_examples/src/: lib.rs
searus_index/: Cargo.toml
searus_index/src/: adapter.rs  lib.rs  memory.rs
searus_searchers/: Cargo.toml
searus_searchers/src/: bm25.rs  fuzzy.rs  semantic.rs  tagged.rs
src/: context.rs  engine.rs  extension.rs  filter.rs  lib.rs  rules.rs  searcher.rs  types.rs
src/embeddings/: mod.rs
src/index/: adapter.rs  memory.rs  mod.rs
src/searchers/: bm25.rs  fuzzy.rs  mod.rs  semantic.rs  tagged.rs  tokenizer.rs
tests/: custom_searcher.rs  extensions.rs
