[package]
name = "searus"
version = "0.0.1"
edition = "2021"
authors = ["Makano"]
license = "MIT"
repository = "https://github.com/kevinj045/searus"
description = "A simple extension-based search engine library"
keywords = ["search", "semantic", "fuzzy", "vector", "bm25"]
categories = ["algorithms", "data-structures"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-segmentation = "1.10"
strsim = "0.11"

[[example]]
name = "basic_semantic"
path = "examples/basic_semantic.rs"

[[example]]
name = "multi_searcher"
path = "examples/multi_searcher.rs"
