[package]
name = "searus"
version = "0.0.2"
edition = "2021"
authors = ["Makano"]
license = "MIT"
repository = "https://github.com/kevinj045/searus"
description = "A simple extension-based search engine library"
keywords = ["search", "semantic", "fuzzy", "vector", "bm25"]
categories = ["algorithms", "data-structures"]

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }
unicode-segmentation = { version = "1.10", optional = true }
strsim = { version = "0.11", optional = true }
rayon = { version = "1.11.0", optional = true }
dashmap = { version = "5.0.2", optional = true }

[features]
default = ["semantic", "fuzzy", "tagged"]

serde = ["dep:serde", "dep:serde_json"]

semantic = ["serde", "dep:unicode-segmentation"]
fuzzy = ["serde", "dep:strsim", "dep:unicode-segmentation"]
tagged = ["serde"]

parallel = ["dep:rayon", "dep:dashmap"]

[[example]]
name = "basic_semantic"
path = "examples/basic_semantic.rs"

[[example]]
name = "multi_searcher"
path = "examples/multi_searcher.rs"

[[example]]
name = "time_check"
path = "examples/time_check.rs"
