[package]
name = "searus_searchers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
searus_core = { path = "../searus_core" }
serde.workspace = true
serde_json.workspace = true
unicode-segmentation = "1.10"
strsim = "0.11"
